--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.3",
     "expo": "~52.0.38",
-    "expo-ads-admob": "^13.0.0",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
@@ -40,6 +39,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-mobile-ads": "^15.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
